--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <poi.version>5.2.3</poi.version>
         <batik.version>1.12</batik.version>
         <itext.svg.version>7.2.5</itext.svg.version>
-        <itext.version>8.0.3</itext.version>
+        <itext.version>7.2.5</itext.version>
         <gson.version>2.8.0</gson.version>
         <slf4j-api.version>2.0.9</slf4j-api.version>
         <jfree.svg.version>5.0.3</jfree.svg.version>
@@ -174,12 +174,11 @@
                 <artifactId>antlr4-runtime</artifactId>
                 <version>${antlr.version}</version> <!-- 使用最新版本 -->
             </dependency>
-            <!-- 用于编译时，生成代码 -->
             <dependency>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4</artifactId>
                 <version>${antlr.version}</version>
-                <scope>provided</scope> <!-- 或者使用compile，取决于你的构建配置 -->
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -287,8 +286,19 @@
             </dependency>
             <dependency>
                 <groupId>com.itextpdf</groupId>
+                <artifactId>sign</artifactId>
+                <version>${itext.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.itextpdf</groupId>
                 <artifactId>kernel</artifactId>
                 <version>${itext.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.itextpdf</groupId>
+                <artifactId>itext7-core</artifactId>
+                <version>${itext.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>com.itextpdf</groupId>
