--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-<!--    <parent>-->
-<!--        <groupId>com.github.paohaijiao</groupId>-->
-<!--        <artifactId>javelin</artifactId>-->
-<!--        <version>1.0.0</version>-->
-<!--    </parent>-->
+    <parent>
+        <groupId>com.github.paohaijiao</groupId>
+        <artifactId>javelin</artifactId>
+        <version>1.0.0</version>
+    </parent>
     <groupId>io.github.paohaijiao</groupId>
     <artifactId>jquick-parent</artifactId>
-    <version>0.0.1</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>jquick</name>
     <properties>
